z-index issue resolved

--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -13,6 +13,7 @@
     background-color: var(--blue);
     color: white;
     top: 0;
+    z-index: 100;
     
 }
 .container h1{
