--- a/src/Components/Users/Users.css
+++ b/src/Components/Users/Users.css
@@ -37,7 +37,7 @@
     margin: .5rem;
     box-shadow: 1px 1px 5px gray;
     border-radius: 1rem;
-    width: 50vw;
+    width: 40vw;
 }
 .userInfo{
     display: flex;
